[versioneer]
VCS = git
style = pep440
versionfile_source = aioconsul/_version.py
versionfile_build = aioconsul/_version.py
tag_prefix = v
parentdir_prefix =

[metadata]
description-file = README.rst

[flake8]
exclude = _version.py
ignore = F403
max-complexity = 10
max-line-length = 80

[wheel]
universal = 1

[coverage:run]
omit =
    aioconsul/_version.py
    aioconsul/typing.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:

[tool:pytest]
flake8-ignore =
    tests/*.py ALL
